--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Meal App | Find Your Meal</title>
+  <title>Search Recepies for Meals</title>
   <!-- fontawsome -->
   <script src="https://kit.fontawesome.com/b75b16d77e.js" crossorigin="anonymous"></script>
   <!-- bootstrap -->
